--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/img/favIcon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/img/favIcon.png"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Memy</title>
   </head>
 
   <body>
     <!-- Github logo -->
     <a
-      href="https://github.com/moghaazi/Meme-Generator"
+      href="https://github.com/moghaazi/memy"
       target="_blank"
       class="github-corner"
       aria-label="View source on GitHub"
