--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Github logo -->
     <a
-      href="https://github.com/moghaazi/memy"
+      href="https://github.com/moghaazi/Memy"
       target="_blank"
       class="github-corner"
       aria-label="View source on GitHub"
