increase meme's font size & add github logo

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/img/favIcon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Memy</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Github logo -->
-    <!--     <a
+    <a
       href="https://github.com/moghaazi/Memy"
       target="_blank"
       class="github-corner"
@@ -73,9 +75,8 @@
           animation: octocat-wave 560ms ease-in-out;
         }
       }
-    </style> -->
+    </style>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  </body>
 </html>
