--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- FavIcon -->
     <link rel="icon" type="image/svg+xml" href="/assets/img/favIcon.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <!-- Description -->
+    <meta
+      name="description"
+      content="Meme maker, simple meme generator, memes ."
+    />
+    <!-- Title -->
     <title>Memy</title>
   </head>
 
