--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <!-- FavIcon -->
     <link rel="icon" type="image/svg+xml" href="/assets/img/favIcon.png" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Description -->
     <meta
       name="description"
